# pac-man

./: .gitignore  README.md  main.py  pyproject.toml
core/: agent.py  config.py  field.py  ghost.py  pacman.py  structure.md
game/: __init__.py  config.py
game/core/: __init__.py  agent.py  config.py  field.py  pacman.py  types.py
game/ui/: config.py  ui.md  ui.py
