[tool.poetry]
name = "pac-man"
version = "0.1.0"
description = ""
authors = ["GrandTiger1729 <80200287+GrandTiger1729@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
